# patterns

./: .gitignore  .isort.cfg  LICENSE  README.md  lint-check.sh  lint.sh  pre-commit-hook  pyproject.toml  ruff.toml
src/patterns/singleton/: __init__.py  _api.py  _implementation.py  _unique_key_getter.py
src/patterns/state/: __init__.py  _add.py  _code_gen.py  _collectors.py  _common.py  _resolver.py  _structs.py  _stubs.py  api.py  exceptions.py  settings.py
tests/patterns/singleton/: test_basics.py
tests/state_pattern/: test_basic.py  test_basic.pyi
