[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# TODO(BK): fill correctly...
name = 'patterns'
version = '0.1.0'
# TODO(BK): make this an extra dependency
dependencies = [
    'click>=8, <9',
]

[project.optional-dependencies]
dev = [
    'ruff',
    'isort',
    'pytest',
]

[projects.scripts]
# TODO(BK): make this work...
generate-stubs = "patterns.state.stubs:generate_stubs"
